# Synapse

./: .gitignore  .task-prompt.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  TASK.md  test-local.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
bindings/cpp/: CMakeLists.txt  conanfile.py
bindings/cpp/cmake/: synapse-config.cmake.in
bindings/cpp/include/: synapse.h
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
core/: Cargo.toml
core/benches/: latency_bench.rs  ring_bench.rs
core/src/: control.rs  error.rs  latest_slot.rs  lib.rs  ring.rs  shm.rs  shutdown.rs  typed_channel.rs  wait.rs
core/tests/: cross_process_test.rs  error_path_test.rs  integration_test.rs  phase2_integration_test.rs
docs/: PHASE2.md
docs/research/: analysis-eva.md  analysis-full.md  analysis-improvements.md
examples/: cpp_receiver.cpp  python_sender.py  test_python_bridge.py
idl/: Cargo.toml  DESIGN.md
idl/examples/: game.bridge  sensors.bridge
idl/src/: ast.rs  layout.rs  lexer.rs  lib.rs  parser.rs
idl/src/codegen/: cpp.rs  mod.rs  python.rs  rust.rs
idl/tests/: cli_test.rs  integration_test.rs
tests/: synapse_cpp_test.cpp
