[package]
name = "synapse-core"
version = "0.1.0"
edition = "2021"
authors = ["Rongze Gao <90145946+zeron-G@users.noreply.github.com>"]
description = "Cross-language runtime bridge using shared memory + lock-free ring buffers"
license = "MIT"
repository = "https://github.com/zeron-G/Synapse"
homepage = "https://github.com/zeron-G/Synapse"
keywords = ["shared-memory", "ipc", "ring-buffer", "cross-language", "zero-copy"]
categories = ["concurrency", "memory-management", "game-development"]
readme = "../README.md"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ring_bench"
harness = false

[[bench]]
name = "latency_bench"
harness = false

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Threading",
] }
