[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "synapse-bridge"
version = "0.1.0"
description = "Cross-language runtime bridge via shared memory + lock-free ring buffers"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["shared-memory", "ipc", "ring-buffer", "cross-language", "zero-copy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/zeron-G/Synapse"
Repository = "https://github.com/zeron-G/Synapse"
Issues = "https://github.com/zeron-G/Synapse/issues"

[tool.maturin]
module-name = "synapse"
